Inlucido funçao de Incrementar e decrementar item do carrinho e outras coisas

--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -1,6 +1,6 @@
 //Cores
-$primary: #fe5f1e;
-$primary-hover: #b23301;
+$primary: #2ceb0b;
+$primary-hover: #07b201;
 $secondary: #f8f8f8;
 $pure: #fff;
 $dark: #232323;
