--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,9 +1,16 @@
-@import './_variables';
+@import './variables';
+@import '~noty/src/noty.scss';
+@import '~noty/src/themes/mint.scss';
+
+* {
+  outline: none;
+}
+
 body {
   font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   color: $dark;
-  height: 4000px;
+  scroll-behavior: smooth;
 }
 
 nav li:last-child a {
@@ -19,34 +26,78 @@ nav li a {
     color: $primary;
   }
 }
-
 section.hero {
   background: $secondary;
 }
+.size {
+  background: $secondary;
+  outline: none;
+}
 
+.size:focus {
+  background: $secondary;
+  outline: none;
+}
 .add-to-cart {
   border: 2px solid $primary;
   color: $primary;
   transition: $smooth;
-
   &:hover {
     background: $primary;
     border-color: $pure;
     color: $pure;
   }
-
   &:focus {
-    outline-style: none;
+    outline: none;
   }
 }
+
+.size {
+  border: 2px solid $primary;
+  //color: $primary;
+  transition: $smooth;
+  &:hover {
+    background: $primary;
+    border-color: $pure;
+    color: $pure;
+  }
+  // &:focus {
+  //   background: $primary;
+  //   border-color: $pure;
+  //   color: $pure;
+  //   outline: none;
+  // }
+}
+
+.size.Selected {
+  background: $primary;
+  border-color: $pure;
+  color: $pure;
+  outline: none;
+
+  // &:hover {
+  //   background: $primary;
+  //   border-color: $pure;
+  //   color: $pure;
+  // }
+  // &:focus {
+  //   background: $primary;
+  //   border-color: $pure;
+  //   color: $pure;
+  //   outline: none;
+  // }
+}
+
 .btn-primary {
   background: $primary;
   transition: $smooth;
+  outline: none;
   &:hover {
     background: $primary-hover;
+    outline: none;
   }
   &:focus {
-    outline-style: none;
+    outline: none;
   }
 }
 
@@ -59,20 +110,328 @@ section.cart {
 
 section.login {
   background: $secondary;
-  min-height: calc (100 - 86px);
-}
-
-.password-text {
-  color: $primary;
-  &:hover {
-    color: $primary-hover;
+  min-height: calc(100vh - 86px);
+  a {
+    color: $primary;
+    &:hover {
+      color: $primary-hover;
+    }
   }
 }
-#password,
-#email-address {
+.noty_theme__mint {
+  border-radius: 50px !important;
+  padding-left: 8px !important;
+}
+
+a.link {
   color: $primary;
-  &:focus {
-    outline: none !important;
-    border-color: $primary;
+}
+
+section.status {
+  background: $secondary;
+  min-height: calc(100vh - 86px);
+}
+.status-box {
+  padding: 60px 0 0;
+}
+.status-box ul {
+  margin-left: 84px;
+}
+.status-box ul li span {
+  position: relative;
+  padding-left: 20px;
+}
+// Dots
+.status-box ul li span:after {
+  content: '';
+  position: absolute;
+  left: -10px;
+  top: 50%;
+  background: $dark;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  transform: translateY(-50%);
+  box-shadow: 0 0 1px 10px $secondary;
+}
+
+// Icons
+.status-box ul li span:before {
+  font-family: 'Line Awesome Free';
+  font-size: 46px;
+  font-weight: 600;
+  position: absolute;
+  left: -90px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: inherit;
+}
+.status-box ul li:nth-child(1) span:before {
+  content: '\f46c';
+}
+
+.status-box ul li:nth-child(2) span:before {
+  content: '\f560';
+}
+
+.status-box ul li:nth-child(3) span:before {
+  content: '\f818';
+}
+
+.status-box ul li:nth-child(4) span:before {
+  content: '\f0d1';
+}
+
+.status-box ul li:nth-child(5) span:before {
+  content: '\f582';
+}
+.status-box ul li {
+  position: relative;
+}
+// Line
+.status-box ul li:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -6px;
+  width: 2px;
+  height: 100%;
+  background: $dark;
+  margin-top: 10px;
+}
+// Last dot
+.status-box ul li:nth-child(5) span:after {
+  box-shadow: 0 20px 1px 20px $secondary;
+}
+
+// line
+.status-box ul li.step-completed:before {
+  background: $gray;
+}
+
+// dots
+.status-box ul li.step-completed span:after {
+  background: $gray;
+}
+
+// text
+.status-box ul li.step-completed span {
+  color: $gray;
+}
+
+// Current status
+.status-box ul li.current span {
+  color: $primary;
+}
+
+.status-box ul li.current span:after {
+  background: $primary;
+}
+
+.status-box ul li small {
+  float: right;
+  font-size: 14px;
+  margin-top: 8px;
+}
+
+.currencyChange :first-child {
+  color: $primary;
+}
+
+.paymentMethod {
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+.paymentMethod .pointer-entry {
+  position: absolute;
+  top: 12px;
+  left: 120px;
+}
+
+.paymentMethod .pointer-payment {
+  position: absolute;
+  top: 12px;
+}
+.orderContainer {
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  width: 400px;
+  max-width: 100%;
+}
+.firstline {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
+.secondline {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.secondline small {
+  color: #e74c3c;
+  visibility: visible;
+}
+.secondline a {
+  margin-right: 0;
+  margin-left: auto;
+  width: auto;
+}
+
+.thirdline {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
+.fourthline {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  column-gap: 10px;
+}
+
+#searchzipcodebtn {
+  margin-left: auto;
+  margin-right: 0;
+  padding: 10px;
+}
+
+#searchclientbtn {
+  margin-left: auto;
+  margin-right: 0;
+  padding: 10px;
+}
+
+#searchUserBtn {
+  margin-left: auto;
+  margin-right: 0;
+  padding: 10px;
+}
+
+.form-control.success input {
+  border-color: #2ecc71;
+}
+
+.form-control.success small {
+  visibility: hidden;
+}
+
+.form-control.error input {
+  border-color: #e74c3c;
+}
+
+.form-control.error small {
+  visibility: visible;
+}
+
+.form-control {
+  position: relative;
+  display: grid;
+  margin-bottom: 10px;
+  padding-bottom: 20px;
+}
+
+.form-control input {
+  display: block;
+}
+
+.form-control label {
+  display: inline-block;
+  margin-bottom: 5px;
+}
+.form-control i {
+  visibility: hidden;
+  position: absolute;
+  top: 40px;
+  margin-left: 4px;
+}
+
+.form-control.success i.fa-check-circle {
+  color: #2ecc71;
+  visibility: visible;
+}
+
+.form-control.error i.fa-exclamation-circle {
+  color: #e74c3c;
+  visibility: visible;
+}
+
+.form-control small {
+  color: #e74c3c;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  visibility: visible;
+}
+
+#order-btn {
+  position: relative;
+}
+#ordernowbtn {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  padding: 10px;
+}
+
+.modal {
+  transition: opacity 0.25s ease;
+}
+.inputModal {
+  display: grid;
+  min-width: 50vw;
+}
+
+.modalinputs > input {
+  margin-top: 10px;
+}
+
+.modalinputs > form {
+  margin-top: 20px;
+}
+
+table {
+  border-spacing: 0px;
+  width: 100%;
+}
+
+.table td,
+.table th {
+  padding: 0.75em;
+  vertical-align: top;
+}
+.table tr.selected {
+  color: #fff;
+  background-color: #ff7d49;
+}
+
+.thead-dark th {
+  color: #fff;
+  background-color: #ff7d49;
+}
+body.modal-active {
+  overflow-x: hidden;
+  overflow-y: visible !important;
+}
+
+@media (max-width: 1060px) {
+  .container {
+    max-width: 90%;
+  }
+  table {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+}
+
+@media (max-width: 768px) {
+  .status-box ul li span:before {
+    font-size: 34px;
   }
 }
