--- a/resources/views/auth/register.ejs
+++ b/resources/views/auth/register.ejs
@@ -1,100 +1,71 @@
-<!--
-  This example requires Tailwind CSS v2.0+ 
-  
-  This example requires some changes to your config:
-  
-  ```
-  // tailwind.config.js
-  module.exports = {
-    // ...
-    plugins: [
-      // ...
-      require('@tailwindcss/forms'),
-    ]
-  }
-  ```
--->
-<section class="login flex justify-center">
-  <div
-    class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8"
-  >
-    <div class="max-w-md w-full space-y-8">
-      <div>
-        <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-          Entre com sua conta
-        </h2>
+<section class="login flex justify-center pt-24">
+  <div class="w-full max-w-xs">
+    <form
+      action="/register"
+      method="POST"
+      class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"
+    >
+      <% if(messages.error) { %>
+      <span class="text-red-500 text-sm"><%= messages.error %></span>
+      <% } %>
+      <div class="mb-4">
+        <label
+          class="block text-gray-700 text-sm font-bold mb-2"
+          for="username"
+        >
+          Nome
+        </label>
+        <input
+          name="name"
+          value="<%= messages.name  %>"
+          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+          id="username"
+          type="text"
+          placeholder="Digite seu nome"
+        />
       </div>
-      <form class="mt-8 space-y-6" action="#" method="POST">
-        <!-- <input type="hidden" name="remember" value="true" /> -->
-        <div class="rounded-md shadow-sm">
-          <div>
-            <span class="font-bold text-lg">Email</span>
-            <label for="email-address" class="sr-only">Email</label>
-            <input
-              id="email-address"
-              name="email"
-              type="email"
-              autocomplete="email"
-              required
-              class="appearance-none mt-2 relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none sm:text-sm"
-            />
-          </div>
-          <div>
-            <span class="font-bold text-lg">Senha</span>
-            <label for="password" class="sr-only">Senha</label>
-            <input
-              id="password"
-              name="password"
-              type="password"
-              autocomplete="current-password"
-              required
-              class="appearance-none rounded-md relative block w-full mt-2 px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:z-10 sm:text-sm"
-            />
-          </div>
-        </div>
-
-        <!-- <div class="password-text font-bold flex items-center justify-between">
-          <div class="flex items-center">
-            <input
-              id="remember_me"
-              name="remember_me"
-              type="checkbox"
-              class="h-4 w-4 border-gray-300 rounded"
-            />
-            <label for="remember_me" class="ml-2 block text-sm">
-              Lembrar-me
-            </label>
-          </div>
-        </div> -->
-
-        <div class="font-bold flex items-center justify-between">
-          <button
-            type="submit"
-            class="btn-primary font-bold py-1 px-6 rounded-full text-white focus:outline-none"
-          >
-            <!-- <span class="absolute left-0 inset-y-0 flex items-center pl-3">
-              Heroicon name: solid/lock-closed
-              <svg
-                class="h-5 w-5"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-            </span> -->
-            Entrar
-          </button>
-          <div class="password-text text-sm">
-            <a href="#" class="font-bold"> Esqueceu sua senha? </a>
-          </div>
-        </div>
-      </form>
-    </div>
+      <div class="mb-4">
+        <label
+          class="block text-gray-700 text-sm font-bold mb-2"
+          for="username"
+        >
+          E-mail
+        </label>
+        <input
+          name="email"
+          value="<%= messages.email  %>"
+          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+          id="username"
+          type="email"
+          placeholder="Digite seu e-mail"
+        />
+      </div>
+      <div class="mb-6">
+        <label
+          class="block text-gray-700 text-sm font-bold mb-2"
+          for="password"
+        >
+          Senha
+        </label>
+        <input
+          name="password"
+          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+          id="password"
+          type="password"
+          placeholder="******************"
+        />
+      </div>
+      <div class="flex items-center justify-between">
+        <button
+          class="btn-primary rounded-full text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+          type="submit"
+        >
+          Registrar
+        </button>
+        <a class="inline-block align-baseline font-bold text-sm" href="/login">
+          Já tem cadastro ?
+        </a>
+      </div>
+    </form>
   </div>
 </section>
