--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -1,215 +1,57 @@
 <section class="hero py-16">
-    <div class="container mx-auto flex items-center justify-between">
-        <div class="w-1/2">
-            <h6 class="text-lg"><em>Bateu a Fome?</em></h6>
-            <h1 class="text-6xl font-bold">Tá esperando o quê?</h1>
-            <button class="px-6 py-2 rounded-full text-white font-bold mt-4 btn-primary">
+  <div class="container mx-auto flex items-center justify-between">
+    <div class="w-1/2">
+      <h6 class="text-lg"><em>Sua Feira sem sair de casa.</em></h6>
+      <h1 class="text-6xl font-bold">Tá esperando o quê?</h1>
+      <button
+        class="px-6 py-2 rounded-full text-white font-bold mt-4 btn-primary"
+      >
         Peça Agora
       </button>
-        </div>
-        <div class="w-1/3"><img src="/img/logo-green-food.png" alt="" /></div>
     </div>
+    <div class="w-1/3"><img src="/img/logo-green-food.png" alt="" /></div>
+  </div>
 </section>
-<section class="menu container mx-auto py-8">
-    <h1 class="text-xl font-bold mb-8">Todos os Itens</h1>
-    <div class="grid grid-cols-4 gap-x-12 gap-y-16">
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/alface-americana.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Alface americana</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-            <span>Adicionar</span>
-          </button>
-                </div>
-            </div>
-        </div>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/couve.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Couve</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-            <span>Adicionar</span>
-          </button>
-                </div>
-            </div>
-        </div>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/agriao.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Agrião</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-            <span>Adicionar</span>
-          </button>
-                </div>
-            </div>
-        </div>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/rucula.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Rúcula</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-            <span>Adicionar</span>
-          </button>
-                </div>
-            </div>
-        </div>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/limao-taiti.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Limão Taiti</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-            <span>Adicionar</span>
-          </button>
-                </div>
-            </div>
-        </div>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/goiaba-vermelha.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Goiaba Vermelha</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-            <span>Adicionar</span>
-          </button>
-                </div>
-            </div>
-        </div>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/banana-prata.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Banana Prata</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-            <span>Adicionar</span>
-          </button>
-                </div>
-            </div>
-        </div>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/abacaxi-havai.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Abacaxi Havaí</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-            <span>Adicionar</span>
-          </button>
-                </div>
-            </div>
-        </div>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/berinjela.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Berinjela</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-          <span>Adicionar</span>
+<section id="container" class="menu container mx-auto py-8">
+  <h1 class="text-xl font-bold mb-8">
+    Todos os Itens <% categories.forEach(function (category){%>
+    <button type="button" class="size py-1 px-4 rounded-full uppercase text-xs">
+      <%= category %>
+    </button>
+    <% })%>
+  </h1>
+  <div
+    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 col-gap-12 row-gap-16"
+  >
+    <% products.forEach(function (product){%>
+    <div class="w-full md:w-64">
+      <img class="h-40 mb-4 mx-auto" src="/img/<%= product.image %>" alt="" />
+      <div class="text-center">
+        <h2 class="mb-4 text-lg"><%= product.name %></h2>
+        <% product.sizes.forEach(function (size){%>
+        <button
+          type="button"
+          data-product="<%= JSON.stringify(product)
+              %>"
+          id="<%= size %>"
+          class="size py-1 px-4 rounded-full uppercase text-xs"
+        >
+          <%= size %>
         </button>
-                </div>
-            </div>
-        </div>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/cebola.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Cebola</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-            <span>Adicionar</span>
+        <% })%>
+        <div class="flex flex-col tems-center justify-around mt-1">
+          <span class="font-bold text-lg">R$ <%= product.price %></span>
+          <button
+            data-product="<%= JSON.stringify(product)%>"
+            class="add-to-cart py-1 px-6 rounded-full mx-8 my-4 font-bold"
+            id="<%= product.id %>"
+          >
+            <span>+</span>
+            <span class="m-4">Adicionar</span>
           </button>
-                </div>
-            </div>
         </div>
-        </class>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/batata-inglesa.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Batata Inglesa</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-            <span>Adicionar</span>
-          </button>
-                </div>
-            </div>
-        </div>
-        </class>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/pepino-japones.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Pepino Japonês</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-        <span>Adicionar</span>
-      </button>
-                </div>
-            </div>
-        </div>
-        </class>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/sementes-de-chia.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Semente de Chia</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-      <span>Adicionar</span>
-    </button>
-                </div>
-            </div>
-        </div>
-        </class>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/grao-de-bico.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Grão de bico</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-        <span>Adicionar</span>
-      </button>
-                </div>
-            </div>
-        </div>
-        </class>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/linhaca-dourada.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Linhaça Dourada</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-      <span>Adicionar</span>
-    </button>
-                </div>
-            </div>
-        </div>
-        </class>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" alt="" src="img/granola.png" alt="" />
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Granola</h2>
-                <div class="flex items-center justify-around">
-                    <span class="font-bold text-lg">R$ 30,000</span>
-                    <button class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold">
-      <span>Adicionar</span>
-    </button>
-                </div>
-            </div>
-        </div>
-        </class>
+      </div>
+    </div>
+    <% })%>
+  </div>
 </section>
