--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -1,37 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GreenFood</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/app.css" />
-</head>
+    <title>Green Food</title>
+    <script
+      src="https://kit.fontawesome.com/ecb358af67.js"
+      crossorigin="anonymous"
+    ></script>
 
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+    />
+    <link rel="stylesheet" href="/css/app.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  </head>
+
+  <body>
     <nav class="container mx-auto flex items-center justify-between py-4">
-        <div>
-            <img src="/img/logo.png" alt="logo" />
-        </div>
-        <div>
-            <ul class="flex items-center">
-                <li class="ml-6"><a href="#">Menu</a></li>
-                <li class="ml-6"><a href="#">Ofertas</a></li>
-                <li class="ml-6"><a href="/register">Registrar</a></li>
-                <li class="ml-6"><a href="/login">Entrar</a></li>
-                <li class="ml-6">
-                    <a href="/cart" class="inline-block px-4 py-2 rounded-full"><img src="/img/cart.png" alt="" /></a>
-                </li>
-            </ul>
-        </div>
+      <div>
+        <a href="/"
+          ><img width="100" height="100" src="/img/logo.png" alt="logo"
+        /></a>
+      </div>
+      <div>
+        <% if (user) { %>
+        <span id="" class=""
+          >Bem Vindo <strong><%= user.name %></strong> !</span
+        >
+        <%}%>
+      </div>
+      <div>
+        <ul class="flex items-center">
+          <% if (user) { %> <% if (user.role == 'admin') { %>
+          <li class="ml-6"><a href="/">Menu</a></li>
+          <li class="ml-6"><a href="/admin/orders">Pedidos</a></li>
+          <li class="ml-6"><a href="/">Clientes</a></li>
+          <li class="ml-6">
+            <form id="logout" action="/logout" method="POST">
+              <a onclick="document.getElementById('logout').submit()" href="#"
+                >Sair</a
+              >
+            </form>
+          </li>
+          <%}%> <% if (user.role == 'customer') { %>
+
+          <li class="ml-6"><a href="/">Menu</a></li>
+          <li class="ml-6"><a href="#">Ofertas</a></li>
+          <li class="ml-6"><a href="/customer/orders">Meus Pedidos</a></li>
+          <li class="ml-6">
+            <form id="logout" action="/logout" method="POST">
+              <a onclick="document.getElementById('logout').submit()" href="#"
+                >Sair</a
+              >
+            </form>
+          </li>
+          <%}%> <%}else{ %>
+          <li class="ml-6"><a href="/">Menu</a></li>
+          <li class="ml-6"><a href="#">Ofertas</a></li>
+          <li class="ml-6"><a href="/register">Registrar</a></li>
+          <li class="ml-6"><a href="/login">Entrar</a></li>
+          <%} %>
+          <li class="ml-6">
+            <a
+              href="/cart"
+              class="inline-block px-4 py-2 rounded-full flex items-center"
+            >
+              <span id="cartCounter" class="text-white font-bold pr-2"
+                ><%= session.cart ? session.cart.totalQty: '' %></span
+              >
+              <img src="/img/cart.png" alt=""
+            /></a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <%- body %>
-        <footer></footer>
+    <footer></footer>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/searchzipcode.js"></script>
+    <script src="/js/searchUser.js"></script>
+    <script src="/js/hideElements.js"></script>
+    <script src="/js/validate.js"></script>
 
-        <script src="/js/app.js"></script>
-</body>
-
+    <!-- <script src="../js/validate.js"></script> -->
+  </body>
 </html>
