--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -147,8 +147,8 @@
        
         <button
           class="btn-primary modal-open rounded-full mb-4 text-white font-bold"
-          id="searchclientbtn"
-          name="searchclientbtn"
+          id="searchClientBtn"
+          name="searchClientBtn"
           type="button"
         >
           Buscar Cliente
