--- a/resources/views/customers/singleOrder.ejs
+++ b/resources/views/customers/singleOrder.ejs
@@ -25,16 +25,19 @@
         >
           <span>Pedido Confirmado</span>
         </li>
-        <li class="status_line text-sm md:text-xl pb-16" data-status="prepared">
+        <li
+          class="status_line text-sm md:text-xl pb-16"
+          data-status="preparation"
+        >
           <span>Em Preparação</span>
         </li>
         <li
           class="status_line text-sm md:text-xl pb-16"
-          data-status="delivered"
+          data-status="outfordelivery"
         >
           <span>Saiu para Entrega</span>
         </li>
-        <li class="status_line text-sm md:text-xl" data-status="completed">
+        <li class="status_line text-sm md:text-xl" data-status="delivered">
           <span>Entregue</span>
         </li>
       </ul>
