--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -44,7 +44,7 @@
           <% if (user) { %> <% if (user.role == 'admin') { %>
           <li class="ml-6"><a href="/">Menu</a></li>
           <li class="ml-6"><a href="/admin/orders">Pedidos</a></li>
-          <li class="ml-6"><a href="/">Clientes</a></li>
+          <li class="ml-6"><a href="/admin/clients">Clientes</a></li>
           <li class="ml-6">
             <form id="logout" action="/logout" method="POST">
               <a onclick="document.getElementById('logout').submit()" href="#"
