--- a/resources/views/admin/orders.ejs
+++ b/resources/views/admin/orders.ejs
@@ -1,6 +1,22 @@
 <section class="orders light-section">
   <div class="container mx-auto pt-12">
+    <button
+      type="button"
+      class="
+        btn-primary
+        modal-open
+        py-1
+        px-6
+        rounded-full
+        my-4
+        text-white
+        font-bold
+      "
+    >
+      Novo Pedido
+    </button>
     <h1 class="font-bold text-lg mb-4">Pedidos</h1>
+
     <table class="w-full table-auto bg-white">
       <thead>
         <tr>
