--- a/public/css/app.css
+++ b/public/css/app.css
@@ -680,6 +680,11 @@ table {
   margin: 0.2em;
 }
 
+.table tr.selected {
+  color: #fff;
+  background-color: #2ecc71;
+}
+
 .table tbody tr:hover {
   background-color: #2ecc71;
 }
