--- a/resources/views/admin/clientForm.ejs
+++ b/resources/views/admin/clientForm.ejs
@@ -153,7 +153,7 @@
     <small></small>
   </div>
   <button
-    id="saveClientBtn"
+    id="selectUser"
     class="btn-primary rounded-full px-4 py-2 mx-4 text-white font-bold"
   >
     Salvar
