--- a/resources/views/auth/register.ejs
+++ b/resources/views/auth/register.ejs
@@ -18,7 +18,19 @@
         <input
           name="name"
           value="<%= messages.name  %>"
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+          class="
+            shadow
+            appearance-none
+            border
+            rounded
+            w-full
+            py-2
+            px-3
+            text-gray-700
+            leading-tight
+            focus:outline-none
+            focus:shadow-outline
+          "
           id="username"
           type="text"
           placeholder="Digite seu nome"
@@ -34,8 +46,20 @@
         <input
           name="email"
           value="<%= messages.email  %>"
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-          id="username"
+          class="
+            shadow
+            appearance-none
+            border
+            rounded
+            w-full
+            py-2
+            px-3
+            text-gray-700
+            leading-tight
+            focus:outline-none
+            focus:shadow-outline
+          "
+          id="email"
           type="email"
           placeholder="Digite seu e-mail"
         />
@@ -49,7 +73,20 @@
         </label>
         <input
           name="password"
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+          class="
+            shadow
+            appearance-none
+            border
+            rounded
+            w-full
+            py-2
+            px-3
+            text-gray-700
+            mb-3
+            leading-tight
+            focus:outline-none
+            focus:shadow-outline
+          "
           id="password"
           type="password"
           placeholder="******************"
@@ -57,7 +94,17 @@
       </div>
       <div class="flex items-center justify-between">
         <button
-          class="btn-primary rounded-full text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+          class="
+            btn-primary
+            rounded-full
+            text-white
+            font-bold
+            py-2
+            px-4
+            rounded
+            focus:outline-none
+            focus:shadow-outline
+          "
           type="submit"
         >
           Registrar
