--- a/resources/views/auth/register.ejs
+++ b/resources/views/auth/register.ejs
@@ -90,6 +90,7 @@
           id="password"
           type="password"
           placeholder="******************"
+          autocomplete="on"
         />
       </div>
       <div class="flex items-center justify-between">
