--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -35,7 +35,7 @@
       <div>
         <% if (user) { %>
         <span id="" class=""
-          >Bem Vindo <strong><%= user.name %></strong> !</span
+          >Bem Vindo, <strong><%= user.username %></strong> !</span
         >
         <%}%>
       </div>
