--- a/resources/views/auth/login.ejs
+++ b/resources/views/auth/login.ejs
@@ -14,8 +14,20 @@
         </label>
         <input
           name="email"
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-          id="username"
+          class="
+            shadow
+            appearance-none
+            border
+            rounded
+            w-full
+            py-2
+            px-3
+            text-gray-700
+            leading-tight
+            focus:outline-none
+            focus:shadow-outline
+          "
+          id="email"
           type="email"
           placeholder="Digite seu e-mail"
         />
@@ -29,15 +41,39 @@
         </label>
         <input
           name="password"
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+          class="
+            shadow
+            appearance-none
+            border
+            rounded
+            w-full
+            py-2
+            px-3
+            text-gray-700
+            mb-3
+            leading-tight
+            focus:outline-none
+            focus:shadow-outline
+          "
           id="password"
           type="password"
           placeholder="******************"
+          autocomplete="on"
         />
       </div>
       <div class="flex items-center justify-between">
         <button
-          class="btn-primary rounded-full text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+          class="
+            btn-primary
+            rounded-full
+            text-white
+            font-bold
+            py-2
+            px-4
+            rounded
+            focus:outline-none
+            focus:shadow-outline
+          "
           type="submit"
         >
           Entrar
