ajustes no cad cliente

--- a/resources/views/admin/clients.ejs
+++ b/resources/views/admin/clients.ejs
@@ -130,12 +130,7 @@
         <div class="inputModal">
           <!--Body-->
 
-          <form
-            action="/admin/clients/handleUser"
-            method="POST"
-            name="handleClientForm"
-            id="handleClientForm"
-          >
+          <form name="handleClientForm" id="handleClientForm">
             <input id="id" name="id" value="" style="display: none" />
             <div class="firstline">
               <div class="form-control">
